objects/Patient_Doctor_Association__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Doctor__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Doctor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patient Doctor Associations (Contact)</relationshipLabel>
        <relationshipName>Patient_Doctor_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patient Doctor Associations</relationshipLabel>
        <relationshipName>Patient_Doctor_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Patient Doctor Association</label>
    <nameField>
        <displayFormat>PDA-{00000}</displayFormat>
        <label>Patient Doctor Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Doctor Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>